--- a/Engel.html
+++ b/Engel.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/style.css"> <!-- Link para o CSS, se aplicável -->
 </head>
 <body>
-  <h1>Alice</h1>
+  <h1>Engel</h1>
   <img src="images.characters/EngelFPE.webp" alt="Alice" style="width:200px;"> <img src="images.characters/EngelFPE2.jpg" alt="Alice" style="width:200px;">
   <h1>informações base</h1>
   <p>Gosta de estudar, Ele se importa com os outros. Nao gosta dos bullys.</p>
