--- a/Claire.html
+++ b/Claire.html
@@ -10,7 +10,7 @@
   <h1>Claire</h1>
   <img src="images.characters/FPE Claire.webp" alt="Claire" style="width:200px;"> <img src="images.characters/FPE Claire 2.webp" alt="Claire" style="width:200px;">
   <h1>informações base</h1>
-  <p>É uma nova aluna na Paper School. É a protagonista de FPE</p>
+  <p>É uma nova aluna na Paper School. É a protagonista de FPE. É amiga de Engel e Bubble e gosta de estudar. Explora a floresta</p>
   <h1>Aparencia</h1>
   <p>Tem cabelos marrons, um lacinho verde, uma camisa branca de manga longa, um casaco azul sem manga, um colar com um potinho com terra e uma planta, um shorts marron, uma meia verde listrada e tenis vermelho.</p>
   <h1>Curiosidades</h1>
@@ -20,6 +20,9 @@
   <nav>
     <ul>
       <li><a href="paperschool.html">Paper School</a></li>
+      <li><a href="Alice.html">Alice</a></li>
+      <li><a href="Bubble.html">Bubble</a></li>
+      <li><a href="Engel.html">Engel</a></li>
     </ul>
   </nav>
 
