--- a/M.s.Circle.html
+++ b/M.s.Circle.html
@@ -14,12 +14,14 @@
   <h1>Aparencia</h1>
   <p>Seus cabelos pretos vao desdos seus pés até depois da cabeca, Ela usa uma calça branca, na mao direita uma luva preta e na mao esquerda tem um Compasso gigante, ela veste uma camisa preta com botoes.</p>
   <h1>Curiosidades</h1>
-  <p>Miss Circle AMA os biscoitos OREO. Ela ama tanto que pode ser surbodinada com OREO pra nao matar quem reprova. Tá ai uma dica pra quem é ruim de matemática. Seu aluno preferido era o Oliver.Até o final do Basics in Behavior onde ela descobre que foi ele quem botou o papel escrito:"Saída" na sala da Alice</p>
+  <p>Miss Circle AMA os biscoitos OREO. Ela ama tanto que pode ser surbodinada com OREO pra nao matar quem reprova. Tá ai uma dica pra quem é ruim de matemática. Seu aluno preferido era o Oliver.Até o final do Basics in Behavior onde ela descobre que foi ele quem botou o papel escrito:"Saída" na sala da Alice. Ela tem medo da Alice</p>
   <h1>História por trás</h1>
   <p>Nao sabemos ainda</p>
   <nav>
     <ul>
       <li><a href="paperschool.html">Paper School</a></li>
+      <li><a href="Alice.html">Alice</a></li>
+      <li><a href="Oliver.html">Oliver/Katie</a></li>
     </ul>
   </nav>
 
