--- a/Engel.html
+++ b/Engel.html
@@ -10,7 +10,7 @@
   <h1>Engel</h1>
   <img src="images.characters/EngelFPE.webp" alt="Alice" style="width:200px;"> <img src="images.characters/EngelFPE2.jpg" alt="Alice" style="width:200px;">
   <h1>informações base</h1>
-  <p>Gosta de estudar, Ele se importa com os outros. Nao gosta dos bullys.</p>
+  <p>Gosta de estudar, Ele se importa com os outros e protege eles da Miss Circle da Miss Bloomie e da Miss Thavel porque ele sabe que elas nao vao mata-lo por que... Porque ele é o Engel. Nao gosta dos bullys.</p>
   <h1>Aparencia</h1>
   <p>Cabelo branco com uma pena com as cores vermelho e azul, uma camisa branca, um macacao preto, calça branca listrada, meia branca e tenis preto</p>
   <h1>Curiosidades</h1>
