--- a/ocs.html
+++ b/ocs.html
@@ -8,7 +8,8 @@
 </head>
 <body>
   <h1>OC's</h1>
-  <p>Essa página tem alguns OCs de FPE criados pelos fãs.</p>
+  <p>Quando Basics in Behavior fez sucesso muitas pessoas quiseram fazer seus próprios personagens de FPE. Ou seus próprios OC's</p>
+  <p>Essa página tem alguns OC's de FPE criados pelos fãs.</p>
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
