--- a/ocs.html
+++ b/ocs.html
@@ -9,7 +9,7 @@
 <body>
   <h1>OC's</h1>
   <p>Quando Basics in Behavior fez sucesso muitas pessoas quiseram fazer seus próprios personagens de FPE. Ou seus próprios OC's</p>
-  <p>Essa página tem alguns OC's de FPE criados pelos fãs.</p>
+  <p>Essa página tem alguns OC's de FPE criados pelos fãs. (Nao é canon)</p>
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
@@ -17,6 +17,11 @@
       <li><a href="memes.html">Memes</a></li>
       <li><a href="ocs.html">OC's</a></li>
       <li><a href="dangerau.html">DANGER AU</a></li>
+
+      <img src="images.OCS/FPE OC's 1.jpg" alt="Mister PC" style="width:200px;">
+      <p>Mister PC é o professor de informatica. Ele tem um filho chamado EJ. Ele tem acesso a todas as cameras de segurança na Paper School. Que faz os professores quando nao tem nada pra fazer, se divertirem vendo as cameras. Ele é tranquilo. Aparentemente nao mata quando reprova. Mas ele ODEIA pessoas lerdas em digitar</p>
+      <img src="images.OCS/FPE OC's 1.jpg" alt="Mister PC" style="width:200px;">
+      <p>EJ é o filho de Mister PC. É cuidado pela Miss Sasha. Ele nao fala com ninguém a nao ser que falem com ele. Ele gosta de música. Quando ele se lembra de alguma música ele toca a música em alto falante. E Sasha pede pra ele parar</p>
     </ul>
   </nav>
 </body>
