--- a/dangerau.html
+++ b/dangerau.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <h1>DANGER AU</h1>
+  <img src="images/FPE Danger AU.jfif" alt="DANGERAU" style="width:200px;">
   <p>Essa página tem tudo sobre a FPE DANGER AU criada por Xenko.</p>
   <nav>
     <ul>
