--- a/dangerau.html
+++ b/dangerau.html
@@ -10,6 +10,11 @@
   <h1>DANGER AU</h1>
   <img src="images/FPE Danger AU.jfif" alt="DANGERAU" style="width:200px;">
   <p>Essa página tem tudo sobre a FPE DANGER AU criada por Xenko.</p>
+  <h1>Personagens</h1>
+  <p>Agora os personagens tem "Danger" antes do nome</p>
+  <h1>DangerCircle</h1>
+  <img src="images.characters.DangerAU/DangerCircleFPEDangerAU.webp" alt="DANGERAU" style="width:200px;">
+  <p>Danger Circle</p>
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
