--- a/dangerau.html
+++ b/dangerau.html
@@ -12,9 +12,9 @@
   <p>Essa página tem tudo sobre a FPE DANGER AU criada por Xenko.</p>
   <h1>Personagens</h1>
   <p>Agora os personagens tem "Danger" antes do nome</p>
-  <h1>DangerCircle</h1>
   <img src="images.characters.DangerAU/DangerCircleFPEDangerAU.webp" alt="DANGERAU" style="width:200px;">
-  <p>Danger Circle</p>
+  <h1>DangerCircle</h1>
+  <p>A Circle agora ao invés de um compasso tem um lança chamas. Ela agora come gasolina e óleo de cozinha. Ela passou um tempo na prisao e aprendeu a viver um dia de cada vez. Mas ela ainda é cruel.</p>
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
