--- a/ocs.html
+++ b/ocs.html
@@ -22,6 +22,8 @@
       <p>Mister PC é o professor de informatica. Ele tem um filho chamado EJ. Ele tem acesso a todas as cameras de segurança na Paper School. Que faz os professores quando nao tem nada pra fazer, se divertirem vendo as cameras. Ele é tranquilo. Aparentemente nao mata quando reprova. Mas ele ODEIA pessoas lerdas em digitar</p>
       <img src="images.OCS/FPE OC's 2.jpg" alt="Mister PC" style="width:200px;">
       <p>EJ é o filho de Mister PC. É cuidado pela Miss Sasha. Ele nao fala com ninguém a nao ser que falem com ele. Ele gosta de música. Quando ele se lembra de alguma música ele toca a música em alto falante. E Sasha pede pra ele parar</p>
+      <img src="images.OCS/MissHurokoFPEOC.jfif" alt="Mister PC" style="width:200px;">      
+      <p>Ai ai, chegou ela. A Huroko é MUUUITO famosa. Eu nao consegui muita informaçao dela. Aparentemente é professora de ciencias, Ela mata(Muitos diziam que ela nao mata mas os videos da conta oficial "dizem" o contrário). Ela finje ser gente boa. (ATENÇAO, essas informaçoes podem estar erradas. Se estiverem comentem no canal @amongzinho8269 a informaçao certa)</p>
     </ul>
   </nav>
 </body>
